Update feature_selection & accuracy_scores.ipynb

--- a/feature_selection & accuracy_scores.ipynb
+++ b/feature_selection & accuracy_scores.ipynb
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('feature_data21.csv')\n",
+    "data = pd.read_csv('data/feature_data21.csv')\n",
     "X = data.drop(data.columns[[0,1]], axis=1)\n",
     "y = data.id"
    ]
@@ -231,7 +231,7 @@
    "outputs": [],
    "source": [
     "# calculate accuracy scores for all pairs\n",
-    "df = pd.read_csv('feature_data17.csv')\n",
+    "df = pd.read_csv('data/feature_data17.csv')\n",
     "labels = ['qiao','wu','yao','wang','lijh','deng','zhang','su','lijc'][::-1]\n",
     "fs = SelectKBest(score_func=f_classif, k='all')\n",
     "clf = LinearSVC(dual=\"auto\")\n",
